# aiostatsd

./: CHANGELOG.md  README.md  __init__.py  client.py  connection.py  pool.py  protocol.py  pyproject.toml  setup.py  statsd_protocol.py  transport_layer_protocol.py  udpconnection.py
aio_statsd/: __init__.py  client.py  connection.py  pool.py  protocol.py  transport_layer_protocol.py  utlis.py
tests/: conftest.py  test_client.py  test_dogstatsd_client.py  test_graphite_client.py  test_statsd_client.py  test_telegraf_client.py  test_telegraf_statsd_client.py
