[tool.poetry]
name = "aio_statsd"
version = "0.2.5"
description = "an asyncio-based client for send metric to StatsD, Graphite.carbon, TelegrafStatsD and DogStatsD."
authors = ["So1n <qaz6803609@163.com>"]
license = "MIT License"
readme = "./README.md"
repository = "https://github.com/so1n/aiostatsd"
homepage = "https://github.com/so1n/aiostatsd"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pytest = "^6.1.2"
isort = "^5.6.4"
pytest-asyncio = "^0.14.0"
pytest-mock = "^3.5.1"
coverage = "^5.4"

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest]
testpaths = "tests"

[tool.coverage.run]
branch = true
source = ["aio_statsd"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
